# pica

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  flake.nix  import-thumbnails.sh  pica.docker-config.yaml
.github/workflows/: build-binaries.yaml  docker-publish-nix.yml  docker-publish.yml
docker/app/: pica.config.yaml
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: _viewport.scss  index.html  main.ts  polyfills.ts  proxy.conf.json  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  history.ts
frontend/src/app/components/album/: album.component.html  album.component.scss  album.component.ts  album.state.ts  images.component.html  images.component.scss  images.component.ts
frontend/src/app/components/album-header/: album-header.component.ts
frontend/src/app/components/album-list/: album-list.component.html  album-list.component.scss  album-list.component.ts
frontend/src/app/components/album-list-directory-item/: album-list-directory-item.component.html  album-list-directory-item.component.scss  album-list-directory-item.component.ts
frontend/src/app/components/album-list-header/: album-list-header.component.scss  album-list-header.component.ts
frontend/src/app/components/album-list-item/: album-list-item.component.html  album-list-item.component.scss  album-list-item.component.ts
frontend/src/app/components/album-list-row/: album-list-row.component.html  album-list-row.component.scss  album-list-row.component.ts
frontend/src/app/components/album-row/: album-row.component.html  album-row.component.scss  album-row.component.ts
frontend/src/app/components/bottom-sheet/: bottom-sheet.component.html  bottom-sheet.component.scss  bottom-sheet.component.ts
frontend/src/app/components/busy-full/: busy-full.component.html  busy-full.component.scss  busy-full.component.ts
frontend/src/app/components/content-wrapper/: content-wrapper.component.html  content-wrapper.component.scss  content-wrapper.component.ts
frontend/src/app/components/error-snackbar/: error-snackbar.component.html  error-snackbar.component.scss  error-snackbar.component.ts
frontend/src/app/components/exif-dialog/: exif-dialog.component.html  exif-dialog.component.scss  exif-dialog.component.ts
frontend/src/app/components/grid/: grid.component.scss  grid.component.ts
frontend/src/app/components/icon/: icon.component.html  icon.component.scss  icon.component.ts
frontend/src/app/components/image-swiper/: image-swiper.component.html  image-swiper.component.scss  image-swiper.component.ts  touch.ts
frontend/src/app/components/image-view/: image-view.component.html  image-view.component.scss  image-view.component.ts
frontend/src/app/components/list-view/: datasource.ts  diffutil.ts  list-view.component.html  list-view.component.scss  list-view.component.ts  view-recycler.ts
frontend/src/app/components/media-item/: media-item.component.html  media-item.component.scss  media-item.component.ts
frontend/src/app/components/navbar/: navbar.component.html  navbar.component.scss  navbar.component.ts
frontend/src/app/components/navbar-item/: navbar-item.component.html  navbar-item.component.scss  navbar-item.component.ts
frontend/src/app/components/progressbar/: progress-bar.component.html  progress-bar.component.scss  progress-bar.component.ts
frontend/src/app/components/search-input/: search-input.component.html  search-input.component.scss  search-input.component.ts
frontend/src/app/components/search-results/: search-results.component.html  search-results.component.scss  search-results.component.ts
frontend/src/app/components/section-title/: section-header.component.html  section-header.component.scss  section-header.component.ts
frontend/src/app/components/snackbar/: snackbar.component.html  snackbar.component.scss  snackbar.component.ts
frontend/src/app/components/thumbnail/: thumbnail.component.scss  thumbnail.component.ts
frontend/src/app/components/topbar/: top-bar.component.html  top-bar.component.scss  top-bar.component.ts
frontend/src/app/directives/: auto-size-scrolling.directive.ts  nav-link-activate.directive.ts  nav-link.directive.ts  taps.directive.ts
frontend/src/app/layouts/: grid.ts
frontend/src/app/pages/album-list-page/: album-list-page.component.html  album-list-page.component.scss  album-list-page.component.ts
frontend/src/app/pages/album-page/: album-page.component.html  album-page.component.scss  album-page.component.ts
frontend/src/app/pages/login-page/: login-page.component.html  login-page.component.scss  login-page.component.ts
frontend/src/app/pages/media-page/: media-page.component.html  media-page.component.scss  media-page.component.ts
frontend/src/app/pages/search-page/: search-page.component.html  search-page.component.scss  search-page.component.ts  search-page.store.ts
frontend/src/app/pages/stream-page/: stream-page.component.html  stream-page.component.ts
frontend/src/app/pipes/: short-date.pipe.ts
frontend/src/app/service/: album-tree.ts  album.store.ts  api.ts  auth.ts  gallery-client.service.ts  gallery.ts  navigation.ts  options.ts  persistent-state.ts  scroll-state.ts  search.ts  stream.store.ts
frontend/src/app/util/: arrays.ts  element-size.ts  index.ts  rxjs.ts  sizes.ts  toStateSignal.ts  utils.ts
frontend/src/assets/: manifest.json
pica_geo/: Cargo.toml
pica_geo/src/: lib.rs
pica_image/: Cargo.toml
pica_image/src/: crx.rs  exif.rs  lib.rs
sql/: 001_base.sql
src/: main.rs
src/pica/: accessor.rs  album.rs  cache.rs  config.rs  db.rs  exif.rs  index.rs  media.rs  mod.rs  queue.rs  scale.rs  store.rs
src/pica/db/: image.rs  media.rs  mod.rs  types.rs
src/pica/geo/: mod.rs
src/pica/image/: crx.rs  mod.rs
src/pica_web/: mod.rs
src/pica_web/auth/: mod.rs
src/pica_web/handlers/: api.rs  auth.rs  frontend.rs  media.rs  mod.rs
src/pica_web/streamzip/: mod.rs
ultrahdr-rs/: Cargo.toml
ultrahdr-rs/src/: jfif.rs  lib.rs  mpf.rs  readcount.rs  xmp.rs
