[package]
name = "pica"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "pica_geo",
    "pica_image",
    "ultrahdr-rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
pica_geo = { path = "./pica_geo" }
pica_image = { path = "./pica_image" }
ultrahdr-rs = { path = "./ultrahdr-rs" }

anyhow = "1.0.87"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.18"
hex = "0.4.3"
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png", "avif"] }
include_dir = { version = "0.7.4" }
itertools = "0.12.1"
mime = "0.3.17"
mime_guess = "2.0.5"
opentelemetry = "0.21.0"
opentelemetry-jaeger = "0.20.0"
priority-queue = "1.4.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.9.0"
serde_yaml = "0.9.34"
sha1_smol = "1.0.1"
sqlx = { version = "0.7.4", features = ["chrono", "sqlite", "migrate", "uuid", "macros", "runtime-tokio"], default-features = false }
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "util", "compression-gzip", "set-header", "trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
walkdir = "2.5.0"
tempfile = "3.12.0"
arcstr = { version = "1.2.0", default-features = false, features = ["serde"] }
axum-login = "0.13.1"
async-trait = "0.1.82"
tower-sessions-sqlx-store = { version = "0.10.0", features = ["sqlite"] }
htpasswd-verify = "0.3.0"
