[package]
name = "pica"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "pica_geo",
    "pica_image",
    "ultrahdr-rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
pica_geo = { path = "./pica_geo" }
pica_image = { path = "./pica_image" }
ultrahdr-rs = { path = "./ultrahdr-rs" }

anyhow = "1.0.89"
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.18"
hex = "0.4.3"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png", "avif"] }
include_dir = { version = "0.7.4" }
itertools = "0.13.0"
mime = "0.3.17"
mime_guess = "2.0.5"
opentelemetry = "0.25.0"
opentelemetry_sdk = { version = "0.25.0" , features = ["rt-tokio"]}
opentelemetry-otlp = "0.25.0"
priority-queue = "2.1.1"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.9.0"
serde_yaml = "0.9.34"
sha1_smol = "1.0.1"
sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "migrate", "uuid", "macros", "runtime-tokio"], default-features = false }
tokio = { version = "1.38.1", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "util", "compression-gzip", "set-header", "trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
walkdir = "2.5.0"
tempfile = "3.12.0"
arcstr = { version = "1.2.0", default-features = false, features = ["serde"] }
axum-login = "0.16.0"
async-trait = "0.1.83"
tower-sessions-sqlx-store = { version = "0.14.0", features = ["sqlite"] }
htpasswd-verify = "0.3.0"
opentelemetry-jaeger-propagator = "0.25.0"
