[package]
name = "pica_geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ordered-float = "4.2.0"
serde = { version = "1.0.196", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
arcstr = { version = "1.1.5", default-features = false, features = ["serde"] }
