[package]
name = "pica_geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
ordered-float = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
flate2 = "1.1.1"
arcstr = { version = "1.2.0", default-features = false, features = ["serde"] }
